kubernetes/k3s-01/workloads/grafana/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.47fc5c.com`)
      kind: Rule
      services:
        - name: grafana
          kind: Service
          port: 3000
          scheme: http
  tls:
    secretName: grafana-certificate
